--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,10 +4,16 @@ services:
     image: mariadb
     restart: always
     environment:
+      MARIADB_ROOT_HOST: localhost
       MARIADB_ROOT_PASSWORD: mariadb
+    volumes:
+      - mariadb_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+volumes:
+  mariadb_data:
