--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "leaflet": "^1.9.4",
     "mariadb": "^3.4.5",
     "pug": "^3.0.3"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "reset": "docker compose down && docker compose up" 
   }
 }
