--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,20 @@
 {
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "env": "^0.0.2",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "leaflet": "^1.9.4",
+    "node": "^25.6.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.18.0",
     "postgres": "^3.4.8",
     "pug": "^3.0.3"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node --env-file='.env' app.js",
+    "start:dev": "node --watch --env-file=.env app.js",
     "reset": "docker compose down && docker compose up"
   }
 }
