--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "env": "^0.0.2",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "flash": "^1.1.0",
     "leaflet": "^1.9.4",
     "node": "^25.6.0",
     "passport": "^0.7.0",
